--- a/src/index.css
+++ b/src/index.css
@@ -47,9 +47,9 @@
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
-  --primary: #FEAD00;
+  --primary: #fe0000;
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: #F7610D;
+  --secondary: #f7760d;
   --secondary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
